fix last step breaking on mobile

--- a/src/scenes/onboarding/components/steps/theme.css
+++ b/src/scenes/onboarding/components/steps/theme.css
@@ -89,7 +89,10 @@
 
 .formRow + .formRow {
   margin-top: 22px;
-  height: 48px;
+
+  @media (--sd-notMobile) {
+    height: 48px;
+  }
 }
 
 .formRow .formRow {
